...
object FakeMonsterDataSource {
    val dummyMonster = listOf(
        Monster(
                "Amatsu",
                "Anti-Aerial",
                "Flying Wyvern",
                "Fire, Dragon",
                "",
                "",
                "Head + Hind Leg",
                12,
                0,
                2,
...
                "https://i.ibb.co/FKgR3Tw/MHRS-Furious-Rajang-Icon.png",
                "Furious Rajang are Rajang variants that are covered in golden fur. Normally Rajang return to their black-furred state after being agitated for a time to conserve energy, but these beasts have lost their ability to curb their anger. Outclassing the standard Rajang's attack power, they assault with seething rage. At the apex of their fury they become enraged and turn into destructiv
        ),Monster(
                "Gaismagorm",
                "N/A",
                "Elder Dragon",
                "Dragon",
                "",
                "Head",
                "Neck + Abdomen + Wing + Tail Tip",
                6,
                0,
                13,
...
                37,
                22,
                "https://i.ibb.co/wNKHYh6/Monster-Hunter-Rise-Sunbreak-20220915-13.jpg",
                "https://i.ibb.co/Kjn9cTg/MHRS-Violet-Mizutsune-Icon.png",
                "Violet Mizutsune are leviathans known for their beautiful lilac-colored fur. They use the fluid they secrete to slide around, targeting their prey with gas-filled bubbles. Though they appear graceful creatures, the facade quickly fades as they envelop themselves in pale flames and bathe their surroundings in a beautiful, but deadly, inferno of white-hot flame."
        ),Monster(
                "Aknosom",
                "Anti-Dragon",
                "Bird Wyvern",
                "Water",
                "Leg",
                "Tail Tip",
                "",
...
                40,
                26,
                "https://i.ibb.co/FH2cgz5/Apex-Zinogre-3.jpg",
                "https://i.ibb.co/84Zfs5B/MHRise-Apex-Zinogre-Icon.png",
                "A Zinogre so mighty, it was crowned an Apex. Its body is covered in scars and wounds as if it had been caught in a storm, and it's seemingly always dominated by wrath and terror. Its forelegs - and their every strike - brim with ferocious sparks. The call of an Apex unleashes its tortured anger on nearby beasts, driving them into a frenzy."
        ),Monster(
                "Arzuros",
                "Fanged Exploit",
                "Fanged Beast",
                "Fire",
                "",
                "Foreleg",
                "Upper Half",
...
                38,
                33,
                "https://i.ibb.co/wg2YkHZ/Monster-Hunter-Rise-Barroth.jpg",
                "https://i.ibb.co/MVSP77c/MHRise-Barroth-Icon.png",
                "Barroth usually remain beneath the mud, perhaps to shield themselves from heat; they are even known to attack by flinging mud. They will charge in a frenzy at anything that disturbs their bogs."
        ),Monster(
                "Basarios",
                "Anti-Dragon",
                "Flying Wyvern",
                "Dragon",
                "",
                "",
                "",
...
