<resources>
    <string name="app_name">RiseDex</string>
    <string name="fire">fire</string>
    <string name="ice">ice</string>
    <string name="thunder">thunder</string>
    <string name="dragon">dragon</string>
    <string name="water">water</string>
    <string name="text_home">Home</string>
...
    <string name="what_is_risedex">What is Risedex ?</string>
    <string name="risedex_desc">Risedex is a fan-made app that helps Monster Hunter Rise: Sunbreak hunters learn more about the various monsters they\'ll encounter. It provides simple information on each monster\'s weaknesses, allowing hunters to plan the best strategy to take them down. For example, if a monster has a fire weakness, Risedex can help hunters find the right weapons and skills to ex
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_desc">Attention Monster Hunter fans! Risedex is a fan-made app created by passionate fans like you. However, please note that this app is not affiliated with, sponsored by, or officially connected to Capcom in any way. Risedex is simply meant to provide additional information and enjoyment for fans of the Monster Hunter franchise. All monster and character names are co
    <string name="author_name">Syekh Syihabuddin Azmil Umri</string>
    <string name="author_email">syekh.syihabuddin@gmail.com</string>
    <string name="app_desc">Simple Monster Hunter Rise Weakness Information For You, Hunter !</string>
    <string name="contact">Contact Me</string>
    <string name="about_app">About App</string>
    <string name="please_wait">Please wait....................</string>
    <string name="legal_desc">By using RiseDex, you acknowledge that you have carefully read and fully understood our Privacy Policy and Terms of Service. By accessing and using our app, you are agreeing to be bound by the terms and conditions outlined in these documents. If you have any questions or concerns, we encourage you to review them again by clicking the buttons below. Your continued use 
    <string name="legal">Legal</string>
    <string name="privacypolicy">Privacy Policy</string>
...
