...
    }
    Box(modifier = modifier) {
        val listState = rememberLazyListState()
        LazyColumn(
            state = listState,
            modifier = Modifier
                .testTag("MonsterList")
        ) {
            item {
                Column(modifier = Modifier.padding(8.dp)){
                    AppName(modifier = Modifier.padding(8.dp), navController = navController)
                    Spacer(modifier = Modifier.height(8.dp))
                    SearchBar(
...
